--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 numpy==1.16.6
-tensorflow==2.1.0
+matplotlib==3.2.1
+pandas==1.0.5
+scikit-learn==0.23.1
+tensorflow==2.0.1
 opencv-python==4.2.0.34
 streamlit==0.67.0
